# aws-lambda-ocaml-example

./: .gitignore  Dockerfile  LICENSE  README.md  aws-lambda.opam  makefile  template.yaml
aws-lambda/src/: bootstrap.ml  bootstrap.mli  dune
handler/src/: dune  handler.ml
