opam-version: "2.0"
version: "0.1"
maintainer: "Jordan Van Walleghem <j.vanwall@gmail.com>"
authors: "Jordan Van Walleghem <j.vanwall@gmail.com>"
homepage: "https://github.com/vanwalj/aws-lambda-ocaml"
bug-reports: "https://github.com/vanwalj/aws-lambda-ocaml/issues"
license: "MIT"
dev-repo: "git+https://github.com/vanwalj/aws-lambda-ocaml.git"
doc: "https://vanwalj.github.io/aws-lambda-ocaml/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build}
  "lwt"
  "lwt_ppx"
  "cohttp"
  "cohttp-lwt-unix"
]

synopsis: "Let you use ocaml as a custom runtime in AWS Lambda"

